bonus: Remote shell

--- a/matt_shell/Makefile
+++ b/matt_shell/Makefile
@@ -1,8 +1,8 @@
 #################### VARIABLES
-NAME = MattDaemon
+NAME = MattShell
 CXX = g++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++17 -g $(if $(BONUS),-DBONUS)
-LDFLAGS = -lcurl #-fsanitize=thread -fno-omit-frame-pointer -pthread
+LDFLAGS = -lreadline
 
 SRC_DIR = src
 OBJ_DIR = obj
@@ -11,8 +11,6 @@ INCLUDES = $(addprefix -I,$(shell find include -type d))
 
 SRCS = $(wildcard $(SRC_DIR)/**/*.cpp)
 OBJS = $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRCS))
-
-MATT_SHELL= matt_shell
 
 #################### RULES
 
@@ -28,20 +26,13 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
-bonus:
-	make $(NAME) BONUS=1
-	make -C $(MATT_SHELL)
-
 clean:
 	rm -rf $(OBJ_DIR)
-	make -C $(MATT_SHELL) clean
 
 fclean: clean
-	rm -rf $(NAME)
-	rm -f $(MATT_SHELL)/MattShell
+	rm -f $(NAME)
 
 re: fclean all
-
 
 
 .PHONY: all clean fclean re
